# QServerCtrl

./: .gitignore  config.example.py  pyproject.toml  start.sh
qserverctrl/: __main__.py  server.py
